--- a/index.html
+++ b/index.html
@@ -21,47 +21,49 @@
 				</div>
 				<div id="displayCalculator">
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 text-center">
-							<input type="text" name="total" id="total" value="0">
+						<div class="col-xs-12 col-sm-12 col-md-12">
+							<div class="calcOutput">
+								<span id="total">0</span>
+							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 text-center">
-							<a class="btn btn-danger">AC</a>
-							<a class="btn btn-danger">C</a>
-							<a class="btn btn-default">%</a>
-							<a class="btn btn-default"> / </a>
+							<a class="btn btn-danger" id="deleteAll">AC</a>
+							<a class="btn btn-danger" id="delete">C</a>
+							<a class="btn btn-default" id="porcent">%</a>
+							<a class="btn btn-default" id="/"> / </a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<a class="btn btn-default">7</a>
-							<a class="btn btn-default">8</a>
-							<a class="btn btn-default">9</a>
-							<a class="btn btn-default"> X </a>
+							<a class="btn btn-default" id="7">7</a>
+							<a class="btn btn-default" id="8">8</a>
+							<a class="btn btn-default" id="9">9</a>
+							<a class="btn btn-default" id="*"> X </a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<a class="btn btn-default">4</a>
-							<a class="btn btn-default">5</a>
-							<a class="btn btn-default">6</a>
-							<a class="btn btn-default"> - </a>
+							<a class="btn btn-default" id="4">4</a>
+							<a class="btn btn-default" id="5">5</a>
+							<a class="btn btn-default" id="6">6</a>
+							<a class="btn btn-default" id="-"> - </a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<a class="btn btn-default">1</a>
-							<a class="btn btn-default">2</a>
-							<a class="btn btn-default">3</a>
-							<a class="btn btn-default"> + </a>
+							<a class="btn btn-default" id="1">1</a>
+							<a class="btn btn-default" id="2">2</a>
+							<a class="btn btn-default" id="3">3</a>
+							<a class="btn btn-default" id="+"> + </a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<a class="btn btn-default">0</a>
-							<a class="btn btn-default">.</a>
-							<a class="btn btn-default equal">=</a>
+							<a class="btn btn-default" id="0">0</a>
+							<a class="btn btn-default" id=".">.</a>
+							<a class="btn btn-default equal" id="equal">=</a>
 						</div>
 					</div>
 				</div>
